# sim-core

./: Cargo.toml  LICENSE_MIT  README.md
src/: battle.rs  interface.rs  lib.rs
src/battle/: battle_direction.rs  battle_log.rs  battle_result.rs  battle_setup.rs  damaged_level.rs  fighting_ship.rs  fp_calculation.rs  mod.rs
src/battle_legacy/: battle_result.rs  fighting_ship.rs  mod.rs  ship_snapshot.rs
src/fleet/: equipment.rs  fleet_like.rs  mod.rs  ship.rs  status.rs
src/interface/: mod.rs
